log/build_2023-10-12_22-58-23/ros_rclpy_package/stderr.log
  File "/home/mintji/ros2_foxy/install/ros_rclpy_package/lib/python3.8/site-packages/ros_rclpy_package/my_service_server.py", line 9
    from my_publisher
                    ^
SyntaxError: invalid syntax

